@@ -226,6 +226,7 @@ Software developers:
 
 Documentation:
 \begin{itemize}
+\item Daniel Audier \url{osteocool@yahoo.fr}
 \item Monika Brinkert \url{moni@sunpig.de}
 \item Kevin Ford \url{ford@math.uiuc.edu}
 \item Claus-W. Häbel \url{c-wh@online.de}
