@@ -45,6 +45,8 @@ Version 6.5 - not yet released
   - added thermal assistant infobox
   - inverse colors for wind arrow infobox and flarm gauge (#2337)
 * track friends via internet connection (SkyLines live tracking)
+* Documentation
+  - started a French translation of the manual
 
 Version 6.4.6 - not yet released
 * devices
